# MusicVisualizer

./: CMakeLists.txt  LICENSE.md  README.md
src/: AudioProcessor.cpp  AudioProcessor.h  Particle.cpp  Particle.h  UIManager.cpp  UIManager.h  Visualizer.cpp  Visualizer.h  main.cpp
